--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
